@@ -1,9 +1,9 @@
-// generated 2006/11/23 16:59:56 CET by tobias@THINKPAD-T43.(none)
+// generated 2008/1/31 4:43:48 CET by tobias@THINKPAD-T43.(none)
 // using glademm V2.6.0
 //
 // DO NOT EDIT THIS FILE ! It was created using
 // glade-- /home/tobias/src/svn/gninjam/trunk/gninjam.glade
-// for gtk 2.10.6 and gtkmm 2.10.4
+// for gtk 2.12.0 and gtkmm 2.12.0
 //
 // Please modify the corresponding derived classes in ./src/vbox_local_channel.cc
 
@@ -62,6 +62,9 @@ vbox_local_channel_glade::vbox_local_channel_glade(GlademmData *gmm_data
    
    Gtk::Adjustment *hscale_local_pan_adj = Gtk::manage(new class Gtk::Adjustment(0, -1, 1, 0.00999999977648, 0.10000000149, 0));
    hscale_local_pan = Gtk::manage(new class Gtk::HScale(*hscale_local_pan_adj));
+   
+   Gtk::Adjustment *spinbutton_bitrate_adj = Gtk::manage(new class Gtk::Adjustment(8, 8, 300, 1, 10, 10));
+   spinbutton_bitrate = Gtk::manage(new class Gtk::SpinButton(*spinbutton_bitrate_adj, 1, 0));
    checkbutton_local_mute = Gtk::manage(new class Gtk::CheckButton(_("Mute")));
    checkbutton_local_solo = Gtk::manage(new class Gtk::CheckButton(_("Solo")));
    
@@ -103,6 +106,13 @@ vbox_local_channel_glade::vbox_local_channel_glade(GlademmData *gmm_data
    hscale_local_pan->set_digits(2);
    hscale_local_pan->set_draw_value(true);
    hscale_local_pan->set_value_pos(Gtk::POS_LEFT);
+   spinbutton_bitrate->set_name("spinbutton_bitrate");
+   spinbutton_bitrate->set_flags(Gtk::CAN_FOCUS);
+   _tooltips.set_tip(*spinbutton_bitrate, _("Bitrate"), "");
+   spinbutton_bitrate->set_update_policy(Gtk::UPDATE_IF_VALID);
+   spinbutton_bitrate->set_numeric(true);
+   spinbutton_bitrate->set_digits(0);
+   spinbutton_bitrate->set_wrap(false);
    checkbutton_local_mute->set_name("checkbutton_local_mute");
    checkbutton_local_mute->set_flags(Gtk::CAN_FOCUS);
    checkbutton_local_mute->set_relief(Gtk::RELIEF_NORMAL);
@@ -119,6 +129,7 @@ vbox_local_channel_glade::vbox_local_channel_glade(GlademmData *gmm_data
    hbox3->set_name("hbox3");
    hbox3->pack_start(*hscale_local_volume);
    hbox3->pack_start(*hscale_local_pan);
+   hbox3->pack_start(*spinbutton_bitrate, Gtk::PACK_SHRINK, 0);
    hbox3->pack_start(*checkbutton_local_mute, Gtk::PACK_SHRINK, 0);
    hbox3->pack_start(*checkbutton_local_solo, Gtk::PACK_SHRINK, 0);
    hbox3->pack_start(*button_local_remove, Gtk::PACK_SHRINK, 0);
@@ -133,6 +144,7 @@ vbox_local_channel_glade::vbox_local_channel_glade(GlademmData *gmm_data
    hbox2->show();
    hscale_local_volume->show();
    hscale_local_pan->show();
+   spinbutton_bitrate->show();
    checkbutton_local_mute->show();
    checkbutton_local_solo->show();
    button_local_remove->show();
@@ -143,6 +155,7 @@ vbox_local_channel_glade::vbox_local_channel_glade(GlademmData *gmm_data
    combobox_local_input->signal_changed().connect(SigC::slot(*this, &vbox_local_channel_glade::on_combobox_local_input_changed), false);
    hscale_local_volume->signal_value_changed().connect(SigC::slot(*this, &vbox_local_channel_glade::on_hscale_local_volume_value_changed), false);
    hscale_local_pan->signal_value_changed().connect(SigC::slot(*this, &vbox_local_channel_glade::on_hscale_local_pan_value_changed), false);
+   spinbutton_bitrate->signal_value_changed().connect(SigC::slot(*this, &vbox_local_channel_glade::on_spinbutton_bitrate_value_changed), false);
    checkbutton_local_mute->signal_toggled().connect(SigC::slot(*this, &vbox_local_channel_glade::on_checkbutton_local_mute_toggled), false);
    checkbutton_local_solo->signal_toggled().connect(SigC::slot(*this, &vbox_local_channel_glade::on_checkbutton_local_solo_toggled), false);
    button_local_remove->signal_clicked().connect(SigC::slot(*this, &vbox_local_channel_glade::on_button_local_remove_clicked), false);
